.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:15:43 **** Clean-only build of configuration Release for project ADC Basics ****
make clean 
rm -rf  ADC\ Basics.hex  ./main.o  ADC\ Basics.eep  sizedummy  ADC\ Basics.lss  ./main.d  "ADC Basics.elf"
 
13:15:43 **** Incremental Build of configuration Release for project ADC Basics ****
make all 
Building file: ../main.c
Invoking: AVR Compiler
avr-gcc -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=1000000UL -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
../main.c: In function ‘main’:
../main.c:28:40: error: ‘ASPS0’ undeclared (first use in this function)
  ADCSRA = (1<<ADEN) | (1<<ADPS2) | (1<<ASPS0);
                                        ^
../main.c:28:40: note: each undeclared identifier is reported only once for each function it appears in
subdir.mk:18: recipe for target 'main.o' failed
make: *** [main.o] Error 1
13:16:45 **** Incremental Build of configuration Release for project ADC Basics ****
make all 
Building file: ../main.c
Invoking: AVR Compiler
avr-gcc -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=1000000UL -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: ADC Basics.elf
Invoking: AVR C Linker
avr-gcc -Wl,-Map,ADC Basics.map -mmcu=atmega32 -o "ADC Basics.elf"  ./main.o   
avr-gcc: error: Basics.map: No such file or directory
makefile:50: recipe for target 'ADC Basics.elf' failed
make: *** [ADC Basics.elf] Error 1
13:17:19 **** Clean-only build of configuration Release for project ADC Basics ****
make clean 
rm -rf  ADC\ Basics.hex  ./main.o  ADC\ Basics.eep  sizedummy  ADC\ Basics.lss  ./main.d  "ADC Basics.elf"
 
13:17:19 **** Clean-only build of configuration Release for project Led_Basic ****
make clean 
rm -rf  Led_Basic.hex  ./main.o  Led_Basic.eep  sizedummy  Led_Basic.lss  ./main.d  Led_Basic.elf
 
13:17:19 **** Clean-only build of configuration Release for project Led_Blink ****
make clean 
rm -rf  Led_Blink.hex  ./main.o  Led_Blink.eep  sizedummy  Led_Blink.lss  ./main.d  Led_Blink.elf
 
13:17:23 **** Clean-only build of configuration Release for project ADC Basics ****
make clean 
rm -rf  ADC\ Basics.hex  ./main.o  ADC\ Basics.eep  sizedummy  ADC\ Basics.lss  ./main.d  "ADC Basics.elf"
 
13:17:23 **** Build of configuration Release for project ADC Basics ****
make all 
Building file: ../main.c
Invoking: AVR Compiler
avr-gcc -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=1000000UL -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: ADC Basics.elf
Invoking: AVR C Linker
avr-gcc -Wl,-Map,ADC Basics.map -mmcu=atmega32 -o "ADC Basics.elf"  ./main.o   
avr-gcc: error: Basics.map: No such file or directory
makefile:50: recipe for target 'ADC Basics.elf' failed
make: *** [ADC Basics.elf] Error 1
13:17:58 **** Clean-only build of configuration Release for project ADC Basics ****
make clean 
rm -rf  ADC\ Basics.hex  ./main.o  ADC\ Basics.eep  sizedummy  ADC\ Basics.lss  ./main.d  "ADC Basics.elf"
 
13:17:58 **** Clean-only build of configuration Release for project Led_Basic ****
make clean 
rm -rf  Led_Basic.hex  ./main.o  Led_Basic.eep  sizedummy  Led_Basic.lss  ./main.d  Led_Basic.elf
 
13:17:58 **** Clean-only build of configuration Release for project Led_Blink ****
make clean 
rm -rf  Led_Blink.hex  ./main.o  Led_Blink.eep  sizedummy  Led_Blink.lss  ./main.d  Led_Blink.elf
 
13:18:01 **** Build of configuration Release for project ADC Basics ****
make all 
Building file: ../main.c
Invoking: AVR Compiler
avr-gcc -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=1000000UL -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: ADC Basics.elf
Invoking: AVR C Linker
avr-gcc -Wl,-Map,ADC Basics.map -mmcu=atmega32 -o "ADC Basics.elf"  ./main.o   
avr-gcc: error: Basics.map: No such file or directory
makefile:50: recipe for target 'ADC Basics.elf' failed
make: *** [ADC Basics.elf] Error 1
13:19:04 **** Clean-only build of configuration Release for project ADC_Basics ****
make clean 
rm -rf  ADC\ Basics.hex  ./main.o  ADC\ Basics.eep  sizedummy  ADC\ Basics.lss  ./main.d  "ADC Basics.elf"
 
13:19:04 **** Clean-only build of configuration Release for project Led_Basic ****
make clean 
rm -rf  Led_Basic.hex  ./main.o  Led_Basic.eep  sizedummy  Led_Basic.lss  ./main.d  Led_Basic.elf
 
13:19:04 **** Clean-only build of configuration Release for project Led_Blink ****
make clean 
rm -rf  Led_Blink.hex  ./main.o  Led_Blink.eep  sizedummy  Led_Blink.lss  ./main.d  Led_Blink.elf
 
13:19:13 **** Build of configuration Release for project ADC_Basics ****
make all 
Building file: ../main.c
Invoking: AVR Compiler
avr-gcc -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega32 -DF_CPU=1000000UL -MMD -MP -MF"main.d" -MT"main.o" -c -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: ADC_Basics.elf
Invoking: AVR C Linker
avr-gcc -Wl,-Map,ADC_Basics.map -mmcu=atmega32 -o "ADC_Basics.elf"  ./main.o   
Finished building target: ADC_Basics.elf
 
Invoking: AVR Create Extended Listing
avr-objdump -h -S ADC_Basics.elf  >"ADC_Basics.lss"
Finished building: ADC_Basics.lss
 
Create Flash image (ihex format)
avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex ADC_Basics.elf  "ADC_Basics.hex"
Finished building: ADC_Basics.hex
 
Create eeprom image (ihex format)
avr-objcopy -j .eeprom --no-change-warnings --change-section-lma .eeprom=0 -O ihex ADC_Basics.elf  "ADC_Basics.eep"
Finished building: ADC_Basics.eep
 
Invoking: Print Size
avr-size --format=avr --mcu=atmega32 ADC_Basics.elf
AVR Memory Usage
----------------
Device: atmega32

Program:     154 bytes (0.5% Full)
(.text + .data + .bootloader)

Data:          0 bytes (0.0% Full)
(.data + .bss + .noinit)


Finished building: sizedummy
 
